--- a/server/UI/variant_1/zadanie7_part1_var1.ui
+++ b/server/UI/variant_1/zadanie7_part1_var1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>421</width>
-    <height>503</height>
+    <width>515</width>
+    <height>465</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -48,8 +48,8 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>320</y>
+     <x>170</x>
+     <y>330</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -61,31 +61,18 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>200</y>
+     <x>20</x>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>460</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>90</y>
+     <x>150</x>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -97,8 +84,8 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>260</y>
+     <x>150</x>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -110,8 +97,8 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>200</y>
+     <x>170</x>
+     <y>210</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -123,8 +110,8 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>260</y>
+     <x>170</x>
+     <y>270</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -136,8 +123,8 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>90</y>
+     <x>170</x>
+     <y>100</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -150,8 +137,8 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>130</y>
+     <x>170</x>
+     <y>140</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -163,8 +150,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>260</y>
+     <x>20</x>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -173,8 +160,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>130</y>
+     <x>20</x>
+     <y>140</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -183,8 +170,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
+     <x>20</x>
+     <y>100</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -196,8 +183,8 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>130</y>
+     <x>150</x>
+     <y>140</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -209,8 +196,8 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>320</y>
+     <x>150</x>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -222,8 +209,8 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>200</y>
+     <x>150</x>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -235,8 +222,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>320</y>
+     <x>20</x>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -245,8 +232,8 @@
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>260</y>
+     <x>300</x>
+     <y>270</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -260,8 +247,8 @@
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>420</y>
+     <x>300</x>
+     <y>430</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -274,8 +261,8 @@
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>200</y>
+     <x>300</x>
+     <y>210</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -289,8 +276,8 @@
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>370</y>
+     <x>300</x>
+     <y>380</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -303,8 +290,8 @@
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>320</y>
+     <x>300</x>
+     <y>330</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -317,8 +304,8 @@
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>90</y>
+     <x>300</x>
+     <y>100</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -331,8 +318,8 @@
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>130</y>
+     <x>300</x>
+     <y>140</y>
      <width>201</width>
      <height>61</height>
     </rect>
@@ -347,8 +334,8 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>90</y>
+     <x>290</x>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -360,8 +347,8 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>130</y>
+     <x>290</x>
+     <y>140</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -373,8 +360,8 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>320</y>
+     <x>290</x>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -386,8 +373,8 @@
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>200</y>
+     <x>290</x>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -399,8 +386,8 @@
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>260</y>
+     <x>290</x>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -412,8 +399,8 @@
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>370</y>
+     <x>290</x>
+     <y>380</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -425,8 +412,8 @@
   <widget class="QLabel" name="label_number_12">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>420</y>
+     <x>290</x>
+     <y>430</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -435,17 +422,95 @@
     <string>7</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLabel" name="label_21">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>460</y>
-     <width>171</width>
-     <height>31</height>
+     <x>20</x>
+     <y>80</y>
+     <width>41</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_6">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>100</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_7">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>140</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_8">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>210</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_9">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>270</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_10">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>330</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>80</y>
+     <width>101</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
