--- a/server/UI/variant_1/zadanie8_part1_var1.ui
+++ b/server/UI/variant_1/zadanie8_part1_var1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>437</width>
-    <height>623</height>
+    <width>548</width>
+    <height>579</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>70</x>
      <y>20</y>
      <width>381</width>
      <height>41</height>
@@ -47,7 +47,7 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>178</x>
      <y>320</y>
      <width>151</width>
      <height>41</height>
@@ -72,7 +72,7 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>158</x>
      <y>460</y>
      <width>16</width>
      <height>20</height>
@@ -92,23 +92,10 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>580</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>160</x>
      <y>540</y>
      <width>16</width>
      <height>20</height>
@@ -121,7 +108,7 @@
   <widget class="QLabel" name="label_word_9">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>180</x>
      <y>500</y>
      <width>141</width>
      <height>31</height>
@@ -135,7 +122,7 @@
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>158</x>
      <y>90</y>
      <width>16</width>
      <height>20</height>
@@ -168,7 +155,7 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>158</x>
      <y>260</y>
      <width>16</width>
      <height>20</height>
@@ -181,7 +168,7 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>180</x>
      <y>210</y>
      <width>131</width>
      <height>31</height>
@@ -195,7 +182,7 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>178</x>
      <y>250</y>
      <width>131</width>
      <height>61</height>
@@ -221,7 +208,7 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>178</x>
      <y>90</y>
      <width>141</width>
      <height>31</height>
@@ -235,7 +222,7 @@
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>160</x>
      <y>500</y>
      <width>16</width>
      <height>20</height>
@@ -248,7 +235,7 @@
   <widget class="QLabel" name="label_word_8">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>178</x>
      <y>460</y>
      <width>141</width>
      <height>20</height>
@@ -261,7 +248,7 @@
   <widget class="QLabel" name="label_word_7">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>178</x>
      <y>420</y>
      <width>141</width>
      <height>31</height>
@@ -275,7 +262,7 @@
   <widget class="QLabel" name="label_word_10">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>180</x>
      <y>540</y>
      <width>141</width>
      <height>31</height>
@@ -289,7 +276,7 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>180</x>
      <y>170</y>
      <width>131</width>
      <height>31</height>
@@ -323,7 +310,7 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>158</x>
      <y>370</y>
      <width>16</width>
      <height>20</height>
@@ -346,7 +333,7 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>158</x>
      <y>420</y>
      <width>16</width>
      <height>20</height>
@@ -372,7 +359,7 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>160</x>
      <y>170</y>
      <width>16</width>
      <height>20</height>
@@ -385,7 +372,7 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>48</x>
+     <x>158</x>
      <y>320</y>
      <width>16</width>
      <height>20</height>
@@ -398,7 +385,7 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>160</x>
      <y>220</y>
      <width>16</width>
      <height>20</height>
@@ -411,7 +398,7 @@
   <widget class="QLabel" name="label_word_6">
    <property name="geometry">
     <rect>
-     <x>68</x>
+     <x>178</x>
      <y>370</y>
      <width>141</width>
      <height>41</height>
@@ -436,7 +423,7 @@
   <widget class="QLabel" name="label_word_16">
    <property name="geometry">
     <rect>
-     <x>252</x>
+     <x>362</x>
      <y>540</y>
      <width>161</width>
      <height>20</height>
@@ -449,7 +436,7 @@
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>260</y>
      <width>151</width>
      <height>20</height>
@@ -462,7 +449,7 @@
   <widget class="QLabel" name="label_word_18">
    <property name="geometry">
     <rect>
-     <x>252</x>
+     <x>362</x>
      <y>500</y>
      <width>151</width>
      <height>20</height>
@@ -475,7 +462,7 @@
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>420</y>
      <width>151</width>
      <height>31</height>
@@ -489,7 +476,7 @@
   <widget class="QLabel" name="label_word_21">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>460</y>
      <width>151</width>
      <height>31</height>
@@ -503,7 +490,7 @@
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>220</y>
      <width>151</width>
      <height>31</height>
@@ -517,7 +504,7 @@
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>370</y>
      <width>151</width>
      <height>31</height>
@@ -531,7 +518,7 @@
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>320</y>
      <width>151</width>
      <height>31</height>
@@ -545,7 +532,7 @@
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>90</y>
      <width>161</width>
      <height>71</height>
@@ -562,7 +549,7 @@
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>170</y>
      <width>161</width>
      <height>31</height>
@@ -576,7 +563,7 @@
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>90</y>
      <width>16</width>
      <height>20</height>
@@ -589,7 +576,7 @@
   <widget class="QLabel" name="label_number_12">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>170</y>
      <width>16</width>
      <height>20</height>
@@ -602,7 +589,7 @@
   <widget class="QLabel" name="label_number_13">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>220</y>
      <width>16</width>
      <height>20</height>
@@ -615,7 +602,7 @@
   <widget class="QLabel" name="label_number_14">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>260</y>
      <width>16</width>
      <height>20</height>
@@ -628,7 +615,7 @@
   <widget class="QLabel" name="label_number_15">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>370</y>
      <width>16</width>
      <height>20</height>
@@ -641,7 +628,7 @@
   <widget class="QLabel" name="label_number_16">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>420</y>
      <width>16</width>
      <height>20</height>
@@ -654,7 +641,7 @@
   <widget class="QLabel" name="label_number_17">
    <property name="geometry">
     <rect>
-     <x>232</x>
+     <x>342</x>
      <y>540</y>
      <width>16</width>
      <height>20</height>
@@ -667,7 +654,7 @@
   <widget class="QLabel" name="label_number_18">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>320</y>
      <width>16</width>
      <height>20</height>
@@ -680,7 +667,7 @@
   <widget class="QLabel" name="label_number_19">
    <property name="geometry">
     <rect>
-     <x>232</x>
+     <x>342</x>
      <y>500</y>
      <width>16</width>
      <height>20</height>
@@ -693,7 +680,7 @@
   <widget class="QLabel" name="label_number_20">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>340</x>
      <y>460</y>
      <width>16</width>
      <height>20</height>
@@ -703,17 +690,160 @@
     <string>8</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLineEdit" name="lineEdit_answer_11">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>580</y>
-     <width>161</width>
-     <height>31</height>
+     <x>80</x>
+     <y>90</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_12">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>170</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_13">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>220</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_14">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>260</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_15">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>320</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_16">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>370</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_17">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>420</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_18">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>460</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_19">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>500</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_20">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>540</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_21">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>70</y>
+     <width>41</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>70</y>
+     <width>101</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
    </property>
   </widget>
  </widget>
