--- a/server/UI/variant_1/zadanie4_part2_var1.ui
+++ b/server/UI/variant_1/zadanie4_part2_var1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>425</width>
-    <height>622</height>
+    <width>587</width>
+    <height>560</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>100</x>
      <y>10</y>
      <width>381</width>
      <height>61</height>
@@ -45,19 +45,6 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>570</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
@@ -78,7 +65,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>390</x>
      <y>140</y>
      <width>51</width>
      <height>20</height>
@@ -105,7 +92,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>390</x>
      <y>300</y>
      <width>51</width>
      <height>20</height>
@@ -132,7 +119,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="lineEdit_3">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>390</x>
      <y>420</y>
      <width>51</width>
      <height>20</height>
@@ -142,8 +129,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QPushButton" name="pushButton_show_text">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>560</y>
+     <x>430</x>
+     <y>500</y>
      <width>91</width>
      <height>41</height>
     </rect>
@@ -152,17 +139,60 @@ p, li { white-space: pre-wrap; }
     <string>Показать текст</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLabel" name="label_35">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>570</y>
-     <width>161</width>
-     <height>31</height>
+     <x>400</x>
+     <y>100</y>
+     <width>41</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_36">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>100</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_4">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>140</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_5">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>300</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_6">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>420</y>
+     <width>51</width>
+     <height>20</height>
+    </rect>
    </property>
   </widget>
  </widget>
