--- a/server/UI/variant_1/zadanie5_part2_var1.ui
+++ b/server/UI/variant_1/zadanie5_part2_var1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>421</width>
-    <height>475</height>
+    <width>593</width>
+    <height>425</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>110</x>
      <y>20</y>
      <width>381</width>
      <height>61</height>
@@ -48,8 +48,8 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>250</y>
+     <x>200</x>
+     <y>260</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -61,31 +61,18 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>170</y>
+     <x>20</x>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_answer">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>430</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Далее</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>90</y>
+     <x>180</x>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -97,8 +84,8 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>210</y>
+     <x>180</x>
+     <y>220</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -110,8 +97,8 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>170</y>
+     <x>200</x>
+     <y>180</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -124,8 +111,8 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>210</y>
+     <x>200</x>
+     <y>220</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -137,8 +124,8 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>90</y>
+     <x>200</x>
+     <y>100</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -150,8 +137,8 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>130</y>
+     <x>200</x>
+     <y>140</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -163,8 +150,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
+     <x>20</x>
+     <y>220</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -173,8 +160,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>130</y>
+     <x>20</x>
+     <y>140</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -183,8 +170,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
+     <x>20</x>
+     <y>100</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -196,8 +183,8 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>130</y>
+     <x>180</x>
+     <y>140</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -209,8 +196,8 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>250</y>
+     <x>180</x>
+     <y>260</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -222,8 +209,8 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>170</y>
+     <x>180</x>
+     <y>180</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -235,8 +222,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>250</y>
+     <x>20</x>
+     <y>260</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -245,8 +232,8 @@
   <widget class="QLabel" name="label_word_17">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>240</y>
+     <x>330</x>
+     <y>250</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -260,8 +247,8 @@
   <widget class="QLabel" name="label_word_20">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>380</y>
+     <x>330</x>
+     <y>390</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -274,8 +261,8 @@
   <widget class="QLabel" name="label_word_23">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>210</y>
+     <x>330</x>
+     <y>220</y>
      <width>201</width>
      <height>21</height>
     </rect>
@@ -287,8 +274,8 @@
   <widget class="QLabel" name="label_word_24">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>340</y>
+     <x>330</x>
+     <y>350</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -301,8 +288,8 @@
   <widget class="QLabel" name="label_word_26">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>300</y>
+     <x>330</x>
+     <y>310</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -315,8 +302,8 @@
   <widget class="QLabel" name="label_word_29">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>90</y>
+     <x>330</x>
+     <y>100</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -330,8 +317,8 @@
   <widget class="QLabel" name="label_word_30">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>150</y>
+     <x>330</x>
+     <y>160</y>
      <width>201</width>
      <height>51</height>
     </rect>
@@ -345,8 +332,8 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>90</y>
+     <x>320</x>
+     <y>100</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -358,8 +345,8 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>150</y>
+     <x>320</x>
+     <y>160</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -371,8 +358,8 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>300</y>
+     <x>320</x>
+     <y>310</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -384,8 +371,8 @@
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>210</y>
+     <x>320</x>
+     <y>220</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -397,8 +384,8 @@
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>240</y>
+     <x>320</x>
+     <y>250</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -410,8 +397,8 @@
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>340</y>
+     <x>320</x>
+     <y>350</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -423,8 +410,8 @@
   <widget class="QLabel" name="label_number_12">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>380</y>
+     <x>320</x>
+     <y>390</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -433,13 +420,91 @@
     <string>7</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_timer">
+  <widget class="QLabel" name="label_35">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>430</y>
-     <width>161</width>
-     <height>31</height>
+     <x>20</x>
+     <y>80</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ответ</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_36">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>80</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Правильный ответ</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_6">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>100</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_7">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>140</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_8">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>180</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_9">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>220</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_answer_10">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>260</y>
+     <width>31</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
